Few fixes and typed js implementation - typed js is back and connected to pageTitle - fixed blog "go to latest" action button as it was not setting active   page to 1 - added max width and hidden overflow to #app element case mobile   devices - added max width to 100% for images

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -49,6 +49,15 @@ h2 {
   margin-bottom:1rem;
 }
 
+img {
+  max-width: 100% !important;
+}
+
 .code-unstyled {
   all: unset !important;
+}
+
+#app {
+  max-width: 100vw !important;
+  overflow: hidden;
 }
